--- a/components/mentions/style/index.less
+++ b/components/mentions/style/index.less
@@ -35,7 +35,7 @@
     margin: 0;
     padding: @input-padding-vertical-base @input-padding-horizontal-base;
     overflow: inherit;
-    overflow-x: initial;
+    overflow-x: hidden;
     overflow-y: auto;
     font-weight: inherit;
     font-size: inherit;
